# SNek

./: .gitignore  Buffer.cpp  Buffer.h  CMakeLists.txt  DoubleBuffer.cpp  DoubleBuffer.h  GameWindow.cpp  GameWindow.h  LBscores.cpp  LBscores.h  Levels.cpp  Levels.h  Makefile  Menu.cpp  Menu.h  README.md  SnakeMovement.cpp  SnakeMovement.h  SnakePlayfield.cpp  SnakePlayfield.h  UIAction.h  UiWindow.h  WindowManager.cpp  WindowManager.h  cmake_install.cmake  controls.cpp  controls.h  main.cpp  types.h
Menu/: GameOverMenu.cpp  GameOverMenu.h  LeaderboardMenu.cpp  LeaderboardMenu.h  MainMenu.cpp  MainMenu.h  MenuBase.cpp  MenuBase.h  PauseMenu.cpp  PauseMenu.h
